--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,15 @@
 {
-	"rewrites": [{ "source": "/public/(.*)", "destination": "/" }]
+	"version": 1,
+	"builds": [
+		{
+			"src": "./public/index.js",
+			"use": "@vercel/node"
+		}
+	],
+	"routes": [
+		{
+			"src": "./public",
+			"dest": "/"
+		}
+	]
 }
