--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,3 @@
 {
-	"version": 1,
-	"builds": [
-		{
-			"src": "./public/index.js",
-			"use": "@vercel/node"
-		}
-	],
-	"routes": [
-		{
-			"src": "/(.*)",
-			"dest": "/"
-		}
-	]
+	"rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
