edit vercel file

--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
 	"version": 2,
 	"builds": [
 		{
-			"src": "./public/index.js",
+			"src": "public/index.js",
 			"use": "@vercel/node"
 		}
 	],
 	"routes": [
 		{
-			"src": "./(.*)",
-			"dest": "./public/index.js"
+			"src": "/(.*)",
+			"dest": "public/index.js"
 		}
 	]
 }
